# xcalar

./: .clang-format  .coveragerc  .dockerignore  .flake8  .gdbinit  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .style.yapf  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  COPYING  Makefile  NOTICE  PASSWORD  QUOTES  README  README.centos  README.dogfood  README.vpn  REVIEWERS  config.h.cmake  requirements.txt  sanity.tst
conf/: CMakeLists.txt  Caddyfile  Caddyfile-dev  caddy.service  container.sh  default.conf  expserver.service  hdfs-client.xml  jupyter.service  localhost.crt  localhost.key  sqldf.service  supervisor-dev.conf  supervisor.conf  support-asup.service  terminal.service  usrnode.service  xcalar-all-defaults  xcalar-limits.conf  xcalar-limits.json  xcalar-logrotate.conf  xcalar-rsyslog.conf  xcalar-sudo.conf  xcalar-sysctl.conf  xcalar-sysctl.json  xcalar-tuned.conf  xcalar.service  xcalar.slice  xcmgmtd.service
conf/cron.d/: xcalar
conf/ld.so.conf.d/: xcalar.conf
scripts/: CMakeLists.txt  Depends.py  DumpGroupTopicPartitions.py  LaunchCustomer4.sh  MonitorTestTrigger.sh  SetXceDefaults.sh.tmpl  Support.py  XdbSerDes.py  batch_csv_load.py  cepudf.py  cgroupsMgr.py  controller_app.py  createRetina.py  csvtoparquet_nopandas.py  dataflow2_runner.py  dataflow_runner.py  dataflow_trace.py  default.py  downloadAndRunApp.sh  driverMgr.py  exportHost.py  fieldFuncTestsClean.sh  fieldFuncTestsConfig.sh  fieldFuncTestsRun.sh  fileBuild.sh  fixRetinaLoad.py  gather_stats.py  get_node_configs.py  get_stats.py  grafana-http-server.py  grpc_server_app.py  kvstoreaws.py  list_files_app.py  load.py  loadmart_stats_uploader.py  mdm_gen.py  notebook_app.py  parquetApp.py  queryToDF2Upgrade.py  schema_discover_load.py  (+26 more)
scripts/exampleWorkbooks/: CMakeLists.txt
scripts/exampleWorkbooks/clr_mart_wbk/: controller_mart_timeline_vis.ipynb  kvstoreInfo.json  sessionInfo.json  workbookChecksum.json  workbookHeader.json
scripts/performance/: fiber_stats_app.py  operator_perf.py
scripts/scheduleRetinas/: __init__.py
scripts/scheduleRetinas/apps/: __init__.py  clearSchedule.py  createSchedule.py  deleteSchedule.py  listSchedule.py  pauseSchedule.py  repairSchedule.py  resumeSchedule.py  updateSchedule.py
scripts/scheduleRetinas/docs/: readme.txt  sampleCreateObj.txt
scripts/scheduleRetinas/executeFromCron/: __init__.py  executeSchedule.py  executeScheduledRetina.py  executeScheduledSnapshot.py
scripts/scheduleRetinas/supportModules/: __init__.py  checkConsistency.py  cronHandler.py  kvHandler.py  kvMutex.py  runAsApp.py
scripts/t/: t_001.sh
scripts/test_loadqa/: auto_test_cases.py  conftest.py  do_xcalar_load.py  execapp.sh  gen_integrity_data.py  gen_tests.py  manual_test_cases.py  modify_testcases.py  perfreport.py  qa_test_gen.py  test_loadqa_suite.py  xc_load_test_cases.py  xc_load_types.py
src/: CMakeLists.txt  sanity.tst
src/3rd/: CMakeLists.txt
src/3rd/boyerMoore/: BoyerMoore.c
src/3rd/bsd/: CMakeLists.txt  StrlFunc.cpp  StrlFunc.h
src/3rd/caddy/: MD5SUMS.txt  get-caddy.sh
src/3rd/crc/: crc32c.cpp
src/3rd/dbgen/: CMakeLists.txt  GIT_SHA  bcd2.c  bm_utils.c  driver.c  makefile  rnd.c
src/3rd/decNumber/: CMakeLists.txt  XlrDecimal64.h  decContext.h  decNumber.h  decimal128.h  decimal64.h
src/3rd/dpkg-sig/: README.md  dpkg-sig.md5sum  dpkg-sig_0.13.1+nmu1.diff
src/3rd/fnv/: Fnv.cpp  Fnv.h  FnvTest.cpp  FnvTest.h
src/3rd/getOpt/: CMakeLists.txt  GetOpt.c  GetOpt.h
src/3rd/lmdb/: CMakeLists.txt  mdb.c
src/3rd/pyodbc/: pyodbc-pip-patch-0001.diff
src/3rd/thrift/: CMakeLists.txt  README  thrift.js  thrift.xcalar-build.patch
src/3rd/utf8verify/: Utf8Verify.cpp  Utf8Verify.h
src/data/: Brunson.cfg  CMakeLists.txt  EcdsaPriv.key  EcdsaPub.key  EcdsaPub.key.official.0  IUS-COMMUNITY-GPG-KEY  Owners  RPM-GPG-KEY-Xcalar  XcalarLic.key  XcalarLic.key.prod  XcalarLicV1.key  XcalarLicV1_0_1.key  apiFilesPaths.env  banned.symbols  bose.cfg  cluster.cfg  doxygen.config  earhart.cfg  faraday-ubuntu14.cfg  faraday.cfg  feynman.cfg  fieldFuncTests.cfg  galois.cfg  gauss.cfg  gclooud-default-template.cfg  gdbcore-1-listing.txt  kalam1.cfg  komogorov.cfg  lomcevak.cfg  monitor-1Node.cfg  monitor.cfg  monitorBig.cfg  monitorStress.cfg  monitorTimeout.cfg  mubuntu.cfg  pmccabe.exceptions  ramsey.cfg  sagan.cfg  schrodinger.cfg  seneca.cfg  (+8 more)
src/data/qa/: CMakeLists.txt  parquet.tar.gz.sha1  test-multisort.csv
src/data/upgradeDurables/: DurConv.cfg  DurConvPreprocess.cfg
src/include/: CMakeLists.txt  CsvLoadArgsEnums.enum  DagRefTypeEnums.enum  DagStateEnums.enum  DagTypes.thrift  DataFormatEnums.enum  DataTargetEnums.enum  DataTargetTypes.thrift  JoinOpEnums.enum  JsonGenEnums.enum  LogLevel.enum  OrderingEnums.enum  QueryParserEnums.enum  QueryStateEnums.enum  SourceTypeEnum.enum  UdfTypeEnums.enum  UdfTypes.thrift  UnionOpEnums.enum  XcalarEvalEnums.enum
src/include/app/: App.h  AppGroup.h  AppHost.h  AppInstance.h  AppMgr.h  SystemApp.h
src/include/bc/: BufCacheMemMgr.h  BufCacheObjectMgr.h  BufferCache.h
src/include/bcquota/: BufferCacheQuota.h
src/include/callout/: Callout.h
src/include/child/: Child.h  XpuRecvQ.h
src/include/childpool/: ChildPool.h
src/include/cli/: CliCoreUtils.h
src/include/common/: ClusterGen.h  InitLevel.h  InitTeardown.h  Version.h
src/include/config/: Config.h
src/include/constants/: XcalarConfig.h
src/include/cursor/: Cursor.h
src/include/dag/: Dag.h  DagLib.h  DagNodeTypes.h  DagTypes.h  RetinaTypes.h
src/include/dataformat/: DataFormatCsv.h  DataFormatJson.h  DataFormatParquet.h  DataFormatSql.h
src/include/datapage/: DataPage.h  DataPageIndex.h  DataValue.h  MemPool.h
src/include/dataset/: AppLoader.h  BackingData.h  Dataset.h  DatasetTypes.h  LibDatasetGvm.h
src/include/demystify/: Demystify.h
src/include/df/: Accessor.h  DataFormat.h  DataFormatBaseTypes.h  DataFormatTypes.h  Exportable.h  FatPointerTypes.h  Importable.h
src/include/durable/: Durable.h
src/include/exec/: ExecXcalarCmd.h
src/lib/: CMakeLists.txt
src/misc/: CMakeLists.txt  processMemoryChange.py
(+1711 files in other folders)
